gettingStart/.metadata/.plugins/org.eclipse.cdt.ui/start.build.log
17:10:04 **** Incremental Build of configuration Debug for project start ****
make -j7 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:19:5: warning: implicit declaration of function 'SystemClock_Config'; did you mean 'SysTick_Config'? [-Wimplicit-function-declaration]
   19 |     SystemClock_Config();
      |     ^~~~~~~~~~~~~~~~~~
      |     SysTick_Config
../Core/Src/main.c:22:5: warning: implicit declaration of function 'MX_GPIO_Init'; did you mean 'HAL_GPIO_Init'? [-Wimplicit-function-declaration]
   22 |     MX_GPIO_Init();
      |     ^~~~~~~~~~~~
      |     HAL_GPIO_Init
../Core/Src/main.c: At top level:
../Core/Src/main.c:37:6: warning: conflicting types for 'SystemClock_Config'; have 'void(void)'
   37 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:19:5: note: previous implicit declaration of 'SystemClock_Config' with type 'void(void)'
   19 |     SystemClock_Config();
      |     ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:67:13: warning: conflicting types for 'MX_GPIO_Init'; have 'void(void)'
   67 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:67:13: error: static declaration of 'MX_GPIO_Init' follows non-static declaration
../Core/Src/main.c:22:5: note: previous implicit declaration of 'MX_GPIO_Init' with type 'void(void)'
   22 |     MX_GPIO_Init();
      |     ^~~~~~~~~~~~
../Core/Src/main.c:67:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
   67 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j7 all" terminated with exit code 2. Build might be incomplete.

17:10:05 Build Failed. 2 errors, 5 warnings. (took 255ms)

